sso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
  namespace: default
spec:
  ports:
    - name: sso
      protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
  type: ClusterIP
