sso/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso
spec:
  ingressClassName: nginx
  rules:
    - host: newsso.coofis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 8080
